@@ -104,70 +104,6 @@ char fw_outline[2000];
   PARSE_ERROR("Unsupported node!")
 
 
-/* debugging stuff */
-void dump_scene (int level, struct X3D_Node* node) {
-	#define spacer	for (lc=0; lc<level; lc++) printf ("  ");
-	int lc;
-	int i;
-	if (level == 0) printf ("starting dump_scene\n");
-	spacer printf ("L%d: node type %s\n",level,stringNodeType(node->_nodeType));
-	switch (node->_nodeType) {
-		case NODE_Transform: { 
-			struct X3D_Transform * this;
-			this = (struct X3D_Transform *) node;
-			for (i=0; i<this->children.n; i++) {
-				dump_scene(level+1,this->children.p[i]);
-			}
-			break;
-		}
-		case NODE_Group: { 
-			struct X3D_Group * this;
-			this = (struct X3D_Group *) node;
-			for (i=0; i<this->children.n; i++) {
-				dump_scene(level+1,this->children.p[i]);
-			}
-			break;
-		}
-		case NODE_Shape: { 
-			struct X3D_Shape * this;
-			this = (struct X3D_Shape *) node;
-			if ((this->appearance) != NULL) dump_scene(level+1,this->appearance);
-			if ((this->geometry) != NULL) dump_scene(level+1,this->geometry);
-			break;
-		}
-		case NODE_Material: { 
-			struct X3D_Material * this;
-			this = (struct X3D_Material *) node;
-			spacer printf ("diffuseColor %f %f %f\n",this->diffuseColor.c[0], 
-				this->diffuseColor.c[1], this->diffuseColor.c[2]);
-			break;
-		}
-		case NODE_Appearance: { 
-			struct X3D_Appearance * this;
-			this = (struct X3D_Appearance *) node;
-			if ((this->material) != NULL) dump_scene(level+1,this->material);
-			break;
-		}
-		case NODE_Script: { 
-			struct X3D_Script * this;
-			struct Script *so;
-			this = (struct X3D_Script *) node;
-			so = (struct Script *) this->__scriptObj;
-			spacer printf ("parenturl %s\n",this->__parenturl->strptr);
-			spacer printf ("script __scriptObj %d\n",so);
-			if (so != NULL) { spacer printf ("scriptObj: scriptnum %d\n",so->num); }
-			
-			break;
-		}
-
-
-		default: {}
-
-	}
-	spacer printf ("L%d\n",level);
-	if (level == 0) printf ("ending dump_scene\n");
-
-}
 /* ************************************************************************** */
 /* Constructor and destructor */
 
