@@ -1,6 +1,8 @@
 For 1.19.7:
 	- fixed (linux) snapshot arguments in CFrontEnd/fwopts.c 
 
+	- EXTERNPROTOS should be working in "classic" VRML Parser
+
 For 1.19.6:
 	- MidiControl - work on event routing of values (Strings changed, etc).
 
